<resources>
    <string name="app_name">TravelMate</string>
    <string name="web_client_id">404101185951-gbu4e2nq3i58riulmdr64175a0up8e2j.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_this_event">Delete this Event?</string>
    <string name="cancel">Cancel</string>
    <string name="yes_delete">Yes, Delete</string>
    <string name="zenkoji_temple">Zenkoji Temple</string>
    <string name="bhuddist_temple">Bhuddist Temple</string>
    <string name="search_here">Search here</string>
    <string name="add_event">Add Event</string>
    <string name="afuri_harajuku">Afuri Harajuku</string>
    <string name="ramen_restaurant">Ramen Restaurant</string>
    <string name="akiba_ichi">Akiba Ichi</string>
    <string name="food_court">Food Court</string>
    <string name="asakusa_shrine">Asakusa Shrine</string>
    <string name="shinto_shrine">Shinto Shrine</string>
    <string name="akihabara_electric_town">Akihabara Electric Town</string>
    <string name="business_park">Business Park</string>
    <string name="save">Save</string>
    <string name="welcome">Welcome!</string>
    <string name="to_create_a_new_account">To create a new account</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_email_address_to_get_the_password_reset_link">Enter your email address to get the password reset link</string>
    <string name="email_address">Email Address</string>
    <string name="password_reset">Password reset</string>
    <string name="create_an_account">Create an account</string>
    <string name="logintext">Login</string>
    <string name="password">Password</string>
    <string name="welcome_back_to_the_app">Welcome back to the app</string>
    <string name="email_address2">Email Address</string>
    <string name="password2">Password</string>
    <string name="forgot_password2">Forgot password?</string>
    <string name="login3">Login</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="keep_me_signed_in">Keep me Signed In?</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_verification_code_we_just_sent_on_your_phone_number">Enter the verification code we just sent on your phone number</string>
    <string name="didn_t_receive_code">Didn\'t receive code?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_new_password_below_to_reset_a_new_password">Enter your new password below to reset a new password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="re_enter_new_password">Re-Enter new password</string>
    <string name="reset_password2">Reset password</string>
    <string name="password3">Password</string>
    <string name="password4">Password</string>
    <string name="create_an_account2">Create an account</string>
    <string name="create_an_account3">Create an account</string>
    <string name="email_address3">Email Address</string>
    <string name="name">Name</string>
    <string name="password5">Password</string>
    <string name="password6">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_sign_up_with2">Or sign up with</string>
    <string name="continue_with_google2">Continue with google</string>
    <string name="sign_in_here">Sign in here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="terms_of_service">terms of service</string>
    <string name="by_continuing_you_agree_to_our">By continuing, you agree to our</string>
</resources>