<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="5dp">

    <androidx.appcompat.widget.SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075"
        android:background="@drawable/signupbutton"
        android:text="@string/search_here"
        app:queryHint="Search here"/>

    <TextView
        android:id="@+id/day1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/add_event"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/drop_img"
        android:layout_width="128dp"
        android:layout_height="81dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="244dp"
        android:scaleType="centerCrop"
        android:src="@drawable/afuri_harajuku"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/drop_name"
        android:layout_width="155sp"
        android:layout_height="34sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/afuri_harajuku"
        android:textAlignment="textStart"
        android:textColor="@color/text_primary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/drop_img"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/drop_name_de"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/ramen_restaurant"
        android:textColor="@color/text_tertiary"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/drop_img"
        app:layout_constraintTop_toBottomOf="@+id/drop_name" />


    <ImageButton
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="140dp"
        android:src="@drawable/addbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/drop_img1"
        android:layout_width="128dp"
        android:layout_height="81dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="232dp"
        android:scaleType="centerCrop"
        android:src="@drawable/akiba_ichi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/drop_name1"
        android:layout_width="155dp"
        android:layout_height="34dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/akiba_ichi"
        android:textAlignment="textStart"
        android:textColor="@color/text_primary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/drop_img1"
        app:layout_constraintTop_toBottomOf="@+id/drop_name" />

    <TextView
        android:id="@+id/drop_name_de1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/food_court"
        android:textColor="@color/text_tertiary"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/drop_img1"
        app:layout_constraintTop_toBottomOf="@+id/drop_name1" />

    <ImageButton
        android:id="@+id/delete_btn1"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/addbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/drop_name1"
        app:layout_constraintTop_toBottomOf="@+id/add_btn" />


    <ImageView
        android:id="@+id/drop_img2"
        android:layout_width="128dp"
        android:layout_height="81dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:scaleType="fitXY"
        android:src="@drawable/asakusa_shrine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drop_img1" />

    <TextView
        android:id="@+id/drop_name2"
        android:layout_width="160sp"
        android:layout_height="34sp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/asakusa_shrine"
        android:textColor="@color/text_primary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/drop_img2"
        app:layout_constraintTop_toBottomOf="@+id/drop_name1" />

    <TextView
        android:id="@+id/drop_name_de2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/shinto_shrine"
        android:textColor="@color/text_tertiary"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/drop_img2"
        app:layout_constraintTop_toBottomOf="@+id/drop_name2" />

    <ImageButton
        android:id="@+id/delete_btn2"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="96dp"
        android:src="@drawable/addbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/drop_name2"
        app:layout_constraintTop_toBottomOf="@+id/delete_btn1" />


    <ImageView
        android:id="@+id/drop_img3"
        android:layout_width="128dp"
        android:layout_height="81dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="500dp"
        android:scaleType="fitXY"
        android:src="@drawable/akihabara_electrictown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drop_img2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/drop_name3"
        android:layout_width="203dp"
        android:layout_height="57dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/akihabara_electric_town"
        android:textColor="@color/text_primary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/drop_img3"
        app:layout_constraintTop_toBottomOf="@+id/drop_name2" />

    <TextView
        android:id="@+id/drop_name_de3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/business_park"
        android:textColor="@color/text_tertiary"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/drop_img3"
        app:layout_constraintTop_toBottomOf="@+id/drop_name3" />

    <ImageButton
        android:id="@+id/add_btn4"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="76dp"
        android:src="@drawable/addbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/drop_name3"
        app:layout_constraintTop_toBottomOf="@+id/delete_btn2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addEvent_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/poppins_bold"
        android:paddingLeft="20sp"
        android:paddingTop="10sp"
        android:paddingRight="20sp"
        android:paddingBottom="10sp"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="595dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
